Day 19: Implemented RBAC (Role Based Access Control ) with JWT and Spring Security.