@@ -5,12 +5,14 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 public class JwtFilter extends OncePerRequestFilter
 {
@@ -26,8 +28,9 @@ public class JwtFilter extends OncePerRequestFilter
                if(JwtUtil.validateToken(token))
                {
                    String  email=JwtUtil.extractEmail(token);
+                   String  role=JwtUtil.extractRole(token);
                    UsernamePasswordAuthenticationToken auth=new UsernamePasswordAuthenticationToken(
-                           email,null,Collections.emptyList()
+                           email,null, List.of(new SimpleGrantedAuthority("ROLE_"+role))
                    );
                    auth.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
                    SecurityContextHolder.getContext().setAuthentication(auth);
@@ -36,34 +39,5 @@ public class JwtFilter extends OncePerRequestFilter
             filterChain.doFilter(request,response);
     }
 
-//    @Override
-//    protected void doFilterInternal(HttpServletRequest request,
-//                                    HttpServletResponse response,
-//                                    FilterChain filterChain) throws ServletException, IOException
-//    {
-//       String header= request.getHeader("Authorization");
-//       if(header != null && header.startsWith("Bearer "))
-//       {
-//          String token= header.substring(7);
-//          if(JwtUtil.validateToken(token))
-//          {
-//             String email= JwtUtil.extractEmail(token);
-//              UsernamePasswordAuthenticationToken auth =
-//                      new UsernamePasswordAuthenticationToken(
-//                              email,
-//                              null,
-//                              Collections.emptyList()
-//                      );
-//
-//              auth.setDetails(
-//                      new WebAuthenticationDetailsSource()
-//                              .buildDetails(request));
-//
-//              SecurityContextHolder
-//                      .getContext()
-//                      .setAuthentication(auth);
-//          }
-//       }
-//       filterChain.doFilter(request,response);
-//    }
+
 }
